--- a/CompiladoresE1/build.xml
+++ b/CompiladoresE1/build.xml
@@ -4,7 +4,7 @@
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
-    <property name="main-class"  value="Numbers"/>
+    <property name="main-class"  value="RunParser"/>
     <property name="grammar.file" value="${src.dir}/MMML.g4"/>
     <property name="grun"        value="org.antlr.v4.gui.TestRig"/>
     <property name="antlrtool"   value="org.antlr.v4.Tool"/>
