--- a/CompiladoresE1/.classpath
+++ b/CompiladoresE1/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="E:/eclispe/workspace/CompiladoresE1/lib/antlr-4.5.3-complete.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mariana/Desktop/TrabalhoComp/CompiladoresE1/lib/antlr-4.5.3-complete.jar"/>
 	<classpathentry kind="src" output="classes" path="src"/>
 	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
 	<classpathentry kind="output" path="bin"/>
